--- a/index.html
+++ b/index.html
@@ -3,28 +3,116 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Aprender a aprender</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+        <img class="logo logo_place_header" src="./images/logo_place_header.png" alt="logo de la pagina">
+        <h1 class="header__title">Aprender a aprender</h1>    
+        <h2 class="header__subtitle">Las técnicas de aprendizaje más eficaces y avanzadas que puedes aplicar en tu vida diaria <a class="header__link" href="#">Mas informacion →</a></h2>
+      <div class="header__square"></div>
+      <div class="header__main-illustration">
+        <img class="header__main_image" src="./images/header-image.png" alt="Persona en la montaña">
+      </div>
+      
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-colums">
+          <div class="two-colums__brief">El principal problema de la educación</div>
+          <div class="two-colums__main-text">
+            <p class="two-colums__paragraph">Ya sea en la escuela o en la universidad, lo único que nadie te enseña es a enseñarte a ti mismo. Muchas veces acabamos haciendo ejercicios específicos y memorizando información sin pensar, para que cuando llegue la hora del examen, aprobemos la prueba. Pero una vez terminada la prueba, esa información ya no tiene utilidad, y no hay garantía de que se conserve. Al final, solo estamos aprendiendo a pasar las pruebas.</p>
+            <p class="two-colums__paragraph"><span class="two-columns__span-accent">Aquí está la verdadera pregunta:</span> ¿este enfoque de repetición y memorización nos ayuda a comprender realmente la materia? El consenso académico actual es que no. En realidad, lo que es más importante que cualquier tema individual es saber cómo estudiar, pero por alguna razón, este punto a menudo se pasa por alto. Entonces, ¿qué podemos hacer para remediarlo?</p>
+            <p class="two-colums__paragraph">Bien, hay varias técnicas y ejercicios que pueden aplicarse al proceso educativo para ayudar a hacerlo más eficiente y atractivo. Continúa avanzando para descubrir algunos de los secretos del aprendizaje eficaz.</p>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <h2 class="section-title">Datos y figuras</h2>
+        <h3 class="section-subtitle">El aprendizaje y el cerebro</h3>
+        <ul class="table">
+            <li class="table__cell"><h4 class="table__heading">86 billones</h4><p class="table__text">El número de neuronas en el cerebro humano</p></li>
+            <li class="table__cell"><h4 class="table__heading">73 %</h4><p class="table__text">Porcentaje de adultos en EE. UU. que se consideran alumnos de por vida</p><p>Pew Research Center</p></li>
+            <li class="table__cell"><h4 class="table__heading">1000 terabytes</h4><p class="table__text">La capacidad de almacenamiento de información de un ser humano</p></li>
+            <li class="table__cell"><h4 class="table__heading">500 trillones</h4><p class="table__text">El número de sinapsis nerviosas responsables del aprendizaje en un ser humano adulto medio</p></li>
+            <li class="table__cell"><h4 class="table__heading">420 millones</h4><p class="table__text">El número de adultos menores de 25 años con una educación insuficiente para encontrar empleo.</p><p>Banco Mundial, 2017</p></li>
+            <li class="table__cell"><h4 class="table__heading">26 años</h4><p class="table__text">La edad a la que Albert Einstein publicó su innovador artículo sobre la relatividad especial</p></li>
+            <li class="table__cell"><h4 class="table__heading">1885</h4><p class="table__text">Desarrollo de la curva del olvido</p></li>
+            <li class="table__cell"><h4 class="table__heading">1897</h4><p class="table__text">Publicación de las investigaciones de Ivan Pavlov sobre el condicionamiento clásico</p></li>
+        </ul>
       </section>
 
       <section class="feynman">
+        <img class="feynman__image" src="./images/feynman.png" alt="Una imagen de Richard
+        Feynman, físico cuántico de fama mundial. Ta Técnica Feynman se
+        deriva de sus métodos de estudio cuando era estudiante en
+        Princeton.">
+        <h2 class="feynman__title">La técnica Feynman</h2>
+        <h3 class="feynman__subtitle">Aprender sin olvidar</h3>
+        <a class="feynman__link" href="#">Mas →</a>
       </section>
 
       <section class="kaufman">
+        <img class="kaufman__triangle" alt="Un gran triángulo azul, sobre el que
+        Josh Kaufman reclama la propiedad" src="./images/kaufman-triangle.svg">
+        <h2 class="section__title table__text_theme_dark">Diez principios para adquirir habilidades rápidamente</h2>
+        <h3 class="section__subtitle table__text_theme_dark">por Josh Kaufman</h3>
+        <ul class="table ">
+          <li class="table__cell table__cell_theme_dark"><h4 class="table__heading">1</h4><p class="table__text">Elegir un proyecto atractivo</p></li>
+          <li class="table__cell table__cell_theme_dark" ><h4 class="table__heading">2</h4><p class="table__text">Enfocar tu energía en una habilidad a la vez</p></li>
+          <li class="table__cell table__cell_theme_dark"><h4 class="table__heading">3</h4><p class="table__text">Definir tu nivel de desempeño</p></li>
+          <li class="table__cell table__cell_theme_dark"><h4 class="table__heading">4</h4><p class="table__text">Deconstruir la habilidad en sub-habilidades</p></li>
+          <li class="table__cell table__cell_theme_dark"><h4 class="table__heading">5</h4><p class="table__text">Obtener herramientas críticas</p></li>
+          <li class="table__cell table__cell_theme_dark"><h4 class="table__heading">6</h4><p class="table__text">Eliminar los obstáculos que impiden la práctica</p></li>
+          <li class="table__cell table__cell_theme_dark"><h4 class="table__heading">7</h4><p class="table__text">Dedicar tiempo a la práctica</p></li>
+          <li class="table__cell table__cell_theme_dark"><h4 class="table__heading">8</h4><p class="table__text">Crear bucles de retroalimentación rápidos</p></li>
+          <li class="table__cell table__cell_theme_dark"><h4 class="table__heading">9</h4><p class="table__text">Practicar en breves intervalos con un reloj</p></li>
+          <li class="table__cell table__cell_theme_dark"><h4 class="table__heading">10</h4><p class="table__text">Enfatizar la cantidad y la velocidad</p></li>
+      </ul>
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns"> 
+        <div class="footer__column footer__column_content_copyright">
+          <img class=" logo__place_footer" src="./images/logo_place_footer.png">
+          <p class="footer__author">&copy; 2023 Dylan Quezada</p>
+        </div>
+        <div class=" footer__column footer__column_content_about">
+          <h4 class="footer__column-heading">Acerca de Practicum de Yandex</h4>
+          <nav class="footer__column-links">
+            <ul class="footer__list">
+              <li>
+                <a class="footer__column-link" href="#">Página principal</a>
+              </li>
+              <li>
+                <a class="footer__column-link" href="#">Misión</a>
+              </li>
+              <li>
+                <a class="footer__column-link" href="#">Profesiones</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <h4 class="footer__column-heading">Redes sociales</h4>
+          <nav class="footer__column-links">
+            <ul class="footer__list">
+              <li>
+                <a class="footer__column-link" href="#">
+                  <img alt="Icono de facebook" class="footer__social-icons" src="./images/facebook_white.svg"/>Facebook</a>
+              </li>
+              <li>
+                <a class="footer__column-link" href="#">
+                  <img alt="Icono de Instagram" class="footer__social-icons" src="./images/instagram_white.svg"/>Instagram</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
