proyecto 2 web_project_sprint_two_es actualizado

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <main class="content">
       <section class="description">
         <div class="two-colums">
-          <div class="two-colums__brief">El principal problema de la educación</div>
+          <div class="two-colums__brief">
+            El principal problema de la educación
+          </div>
           <div class="two-colums__main-text">
             <p class="two-colums__paragraph">Ya sea en la escuela o en la universidad, lo único que nadie te enseña es a enseñarte a ti mismo. Muchas veces acabamos haciendo ejercicios específicos y memorizando información sin pensar, para que cuando llegue la hora del examen, aprobemos la prueba. Pero una vez terminada la prueba, esa información ya no tiene utilidad, y no hay garantía de que se conserve. Al final, solo estamos aprendiendo a pasar las pruebas.</p>
             <p class="two-colums__paragraph"><span class="two-columns__span-accent">Aquí está la verdadera pregunta:</span> ¿este enfoque de repetición y memorización nos ayuda a comprender realmente la materia? El consenso académico actual es que no. En realidad, lo que es más importante que cualquier tema individual es saber cómo estudiar, pero por alguna razón, este punto a menudo se pasa por alto. Entonces, ¿qué podemos hacer para remediarlo?</p>
@@ -47,17 +49,20 @@
         <h2 class="section-title">Charlas TED</h2>
         <h3 class="section-subtitle">Para los amantes de la procrastinación</h3>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="560px" height="316px" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="560px" height="316px" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="560" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="560" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div> 
       </section>
       
       <section class="oakley">
         <div class="two-colums">
-          <div class="two-colums__brief">La historia de Barbara Oakley.</div>
-          <div class="two-colums__main-text">
-            <p class="two-colums__paragraph">Durante la infancia de Barbara, las matemáticas no le surgieron de forma innata. Pensaba que era una persona más orientada a las humanidades, y no precisamente brillante. En vistas a convertirse en lingüista, después de terminar el instituto se alistó en el ejército, donde la mandaron a aprender ruso. Tras varios años de servicio, durante los cuales ascendió al rango de capitán, Barbara dejó el ejército y decidió estudiar ingeniería. Fue en este momento cuando desarrolló su metodología de aprendizaje, porque se vio obligada a reprogramar su cerebro para un tipo de aprendizaje distinto. Resulta que cuando algo no te sale de forma natural, el hecho de tener que trabajar duro para obtener conocimientos, que otras personas pueden captar a la primera, te da un conocimiento más profundo y completo del tema en cuestión.</p>
+          <div class="two-colums__brief">
+            La historia de Barbara Oakley.
+          </div>
+            <div class="two-colums__main-text">
+              <p class="two-colums__paragraph">Durante la infancia de Barbara, las matemáticas no le surgieron de forma innata. Pensaba que era una persona más orientada a las humanidades, y no precisamente brillante. En vistas a convertirse en lingüista, después de terminar el instituto se alistó en el ejército, donde la mandaron a aprender ruso. Tras varios años de servicio, durante los cuales ascendió al rango de capitán, Barbara dejó el ejército y decidió estudiar ingeniería. Fue en este momento cuando desarrolló su metodología de aprendizaje, porque se vio obligada a reprogramar su cerebro para un tipo de aprendizaje distinto. Resulta que cuando algo no te sale de forma natural, el hecho de tener que trabajar duro para obtener conocimientos, que otras personas pueden captar a la primera, te da un conocimiento más profundo y completo del tema en cuestión.</p>
             </div>
+        </div>
       </section>
       
       <section class="feynman">
@@ -123,9 +128,9 @@
         <h3 class="section-subtitle">El aprendizaje y el cerebro</h3>
         <div class="resources__logo-zone">
           <a href="#"><img class="resources__logo" src="./images/resources-tedED.png" alt="logo"></a>
-          <a href="#"></a><img class="resources__logo" src="./images/resources-Medium.png" alt="logo"></a>
-          <a href="#"></a><img class="resources__logo" src="./images/resources-dezeen.png" alt="logo"></a>
-          <a href="#"></a><img class="resources__logo" src="./images/resources-goodreads.png" alt="logo"></a>
+          <a href="#"><img class="resources__logo" src="./images/resources-Medium.png" alt="logo"></a>
+          <a href="#"><img class="resources__logo" src="./images/resources-dezeen.png" alt="logo"></a>
+          <a href="#"><img class="resources__logo" src="./images/resources-goodreads.png" alt="logo"></a>
         </div>
       </section>
     </main>
