--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="cards__item"><img class="cards__image" src="./images/cards-recall.png" alt="Persona Pensando"><h4 class="cards__title">Usa el recuerdo</h4><p class="cards__description">Mejorar tu capacidad de recordar piezas clave de información ayuda a conectar diferentes áreas del cerebro.</p></li>
             <li class="cards__item"><img class="cards__image" src="./images/cards-interleaving.png" alt="Estacion de metro"><h4 class="cards__title">Alterna</h4><p class="cards__description">Cuando aprendes múltiples habilidades al mismo tiempo, estas se refuerzan mutuamente.</p></li>
             <li class="cards__item"><img class="cards__image" src="./images/cards-question.png" alt="Cuarto con ventanas"><h4 class="cards__title">Haz preguntas</h4><p class="cards__description">Cuando escuches a tu profesor, piensa en una buena pregunta, en algo que realmente te intrigue.</p></li>
-            <li class="cards__item"><img class="cards__image" src="./images/cards-competence.png" alt="Mano sosteniendo libros"><h4 class="cards__title">Crea la ilusión de competencia</h4><p class="cards__description">Ponte a prueba, apunta tu resultado, cuéntaselo a otras personas y repite el proceso con diferentes configuraciones. Solo entonces podrás estar seguro de haber comprendido algo.</li>
+            <li class="cards__item"><img class="cards__image" src="./images/cards-competence.png" alt="Mano sosteniendo libros"><h4 class="cards__title">Crea la ilusión de competencia</h4><p class="cards__description">Ponte a prueba, apunta tu resultado, cuéntaselo a otras personas y repite el proceso con diferentes configuraciones. Solo entonces podrás estar seguro de haber comprendido algo.</p></li>
         </ul>
       </section>
 
