--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2 class="header__subtitle">Las técnicas de aprendizaje más eficaces y avanzadas que puedes aplicar en tu vida diaria <a class="header__link" href="#">Mas informacion →</a></h2>
       <div class="header__square"></div>
       <div class="header__main-illustration">
-        <img class="header__main_image" src="./images/header-image.png" alt="Persona en la montaña">
+        <img class="header__main-image" src="./images/header-image.png" alt="Persona en la montaña">
       </div>
       
     </header>
@@ -27,7 +27,7 @@
           </div>
           <div class="two-colums__main-text">
             <p class="two-colums__paragraph">Ya sea en la escuela o en la universidad, lo único que nadie te enseña es a enseñarte a ti mismo. Muchas veces acabamos haciendo ejercicios específicos y memorizando información sin pensar, para que cuando llegue la hora del examen, aprobemos la prueba. Pero una vez terminada la prueba, esa información ya no tiene utilidad, y no hay garantía de que se conserve. Al final, solo estamos aprendiendo a pasar las pruebas.</p>
-            <p class="two-colums__paragraph"><span class="two-columns__span-accent">Aquí está la verdadera pregunta:</span> ¿este enfoque de repetición y memorización nos ayuda a comprender realmente la materia? El consenso académico actual es que no. En realidad, lo que es más importante que cualquier tema individual es saber cómo estudiar, pero por alguna razón, este punto a menudo se pasa por alto. Entonces, ¿qué podemos hacer para remediarlo?</p>
+            <p class="two-colums__paragraph"><span class="two-columns__span_accent">Aquí está la verdadera pregunta:</span> ¿este enfoque de repetición y memorización nos ayuda a comprender realmente la materia? El consenso académico actual es que no. En realidad, lo que es más importante que cualquier tema individual es saber cómo estudiar, pero por alguna razón, este punto a menudo se pasa por alto. Entonces, ¿qué podemos hacer para remediarlo?</p>
             <p class="two-colums__paragraph">Bien, hay varias técnicas y ejercicios que pueden aplicarse al proceso educativo para ayudar a hacerlo más eficiente y atractivo. Continúa avanzando para descubrir algunos de los secretos del aprendizaje eficaz.</p>
           </div>
         </div>
@@ -107,8 +107,8 @@
       <section class="kaufman">
         <img class="kaufman__triangle" alt="Un gran triángulo azul, sobre el que
         Josh Kaufman reclama la propiedad" src="./images/kaufman-triangle.svg">
-        <h2 class="section__title table__text_theme_dark">Diez principios para adquirir habilidades rápidamente</h2>
-        <h3 class="section__subtitle table__text_theme_dark">por Josh Kaufman</h3>
+        <h2 class="section-title table__text-theme-dark">Diez principios para adquirir habilidades rápidamente</h2>
+        <h3 class="section-subtitle table__text-theme-dark">por Josh Kaufman</h3>
         <ul class="table ">
           <li class="table__cell table__cell_theme_dark"><h4 class="table__heading">1</h4><p class="table__text">Elegir un proyecto atractivo</p></li>
           <li class="table__cell table__cell_theme_dark" ><h4 class="table__heading">2</h4><p class="table__text">Enfocar tu energía en una habilidad a la vez</p></li>
@@ -137,7 +137,7 @@
     <footer class="footer">
       <div class="footer__columns"> 
         <div class="footer__column footer__column_content_copyright">
-          <img alt="logo de practicum" class=" logo__place_footer" src="./images/logo_place_footer.png">
+          <img alt="logo de practicum" class=" logo__place-footer" src="./images/logo_place_footer.png">
           <p class="footer__author">&copy; 2023 Dylan Quezada</p>
         </div>
         <div class=" footer__column footer__column_content_about">
